--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <properties>
 
         <!-- Generic properties -->
+         <jacoco-maven-plugin>0.8.6</jacoco-maven-plugin>    
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
